# todo-extractor

./: .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml  requirements-dev.txt  todo_extractor.py
.github/workflows/: codeql-analysis.yml  publish.yml  tox.yml
tests/: test_todo_extractor.py
todo_extractor/: __init__.py  cli.py  todo_extractor.py
