[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "todo_extractor"
author = "Viktor Ahlqvist"
author-email = "flit@site.rxbc.se"
home-page = "https://github.com/vikahl/todo-extractor"
description-file = "README.md"
requires-python=">=3.6"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]

[tool.flit.metadata.requires-extra]
test = ["pytest",
        "pytest-cov",
        "pytest-mock",
        "tox",
        "black",
        "pylint",
        "mypy",
        "isort[pyproject]"
]

dev = ["pre-commit"
]

[tool.flit.scripts]
todo_extractor = "todo_extractor:main"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    isort,
    black,
    lint,
    types,
    py36,
    py37,
    py38
isolated_build = True

[gh-actions]
python =
    3.6: py36, isort, black, lint, types
    3.7: py37
    3.8: py38

[testenv]
deps =
  pytest
  pytest-cov
  pytest-mock
changedir = {toxinidir}/tests
commands = python3 -m pytest --cov={envsitepackagesdir}/todo_extractor

[testenv:black]
basepython = python3.6
deps = black
commands = black . --diff --check

[testenv:lint]
basepython = python3.6
deps = pylint
commands = pylint --rcfile={toxinidir}/pylintrc {envsitepackagesdir}/todo_extractor

[testenv:types]
basepython = python3.6
deps = mypy
commands = python3 -m mypy {toxinidir}/todo_extractor

[testenv:isort]
basepython = python3.6
deps = isort[pyproject]
commands = isort -rc {toxinidir}/todo_extractor
"""

[tool.black]
line-length = 110

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 110
